--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
     <title>HaPTT - Lab 3 - Thuc Hanh</title>
 
     <!-- icon -->
@@ -11,28 +12,54 @@
 
     <!-- link css -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <link rel="stylesheet" type="text/css" media='screen and (min-width: 320px)' href="css/responsiveMedia320.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 375px)' href="css/responsiveMedia375.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 425px)' href="css/responsiveMedia425.css">
     <link rel="stylesheet" type="text/css" media='screen and (min-width: 768px)' href="css/responsiveMedia768.css">
     <link rel="stylesheet" type="text/css" media='screen and (min-width: 1024px)' href="css/responsiveMedia1024.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 1440px)' href="css/responsiveMedia1440.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 2560px)' href="css/responsiveMedia2560.css">
 
 </head>
 
 <body>
-    <div id="background-gradient">
-        <div id="container-content">
-            <div id="container">
-                <div>
-                    <img class="imagesan" src="images/san.PNG" alt="San Joaquin Valley Town Hall">
-                </div>
-                <div>
-                    <h2 class="shadow text-center">San Joaquin Valley Town Hall</h2>
-                    <h3 class="text-center"><strong>Bringing cutting-edge speakers to the valley</strong></h3>
-                </div>
+    <div id="container">
+        <div id="header-top">
+            <div id="header-image">
+                <img class="image-san" src="images/san.PNG" alt="San Joaquin Valley Town Hall">
             </div>
+            <div id="header-name">
+                <h2 class="shadow text-center">San Joaquin Valley Town Hall</h2>
+                <h3 class="text-center"><strong>Bringing cutting-edge speakers to the valley</strong></h3>
+            </div>
+        </div>
 
-            <div id="body-content">
-                <hr class="hr-line">
+        <div id="body-content">
+            <div class="slider-show">
+                <div class="mySlides fade">
+                    <div id="image-text">
+                        <h2>HT Active - Professional Software Solutions</h2>
+                    </div>
+                    <img src="images/1045.jpg" style="width:100%" class="image" />
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="image-text">
+                        <h2>We provide all you need</h2>
+                    </div>
+                    <img src="images/1046.jpeg" style="width:100%" class="image" />
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="image-text">
+                        <h2>Satifiscation is what we need</h2>
+                    </div>
+                    <img src="images/1048.jpg" style="width:100%" class="image" />
+                </div>
+
+                <div id="Loading"></div>
+            </div>
+            <div id="content">
                 <h3>This season's guest speakers</h3>
                 <ul>
                     <li>October: <a class="text-gray" href="https://en.wikipedia.org/wiki/Jeffrey_Toobin" target="_blank">Jeffrey Toobin</a></li>
