--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link rel="stylesheet" type="text/css" media='screen and (min-width: 768px)' href="css/responsiveMedia768.css">
     <link rel="stylesheet" type="text/css" media='screen and (min-width: 1024px)' href="css/responsiveMedia1024.css">
     <link rel="stylesheet" type="text/css" media='screen and (min-width: 1440px)' href="css/responsiveMedia1440.css">
-    <link rel="stylesheet" type="text/css" media='screen and (min-width: 2560px)' href="css/responsiveMedia2560.css">
-
 </head>
 
 <body>
@@ -30,37 +28,61 @@
             </div>
             <div id="header-name">
                 <h2 class="shadow text-center">San Joaquin Valley Town Hall</h2>
-                <h3 class="text-center"><strong>Bringing cutting-edge speakers to the valley</strong></h3>
+                <h4 class="text-center"><strong>Bringing cutting-edge speakers to the valley</strong></h4>
             </div>
+            <div class="menu-bar" id="hidden-menu-responsive">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <!-- <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i></a> -->
+            </div>
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <div class="image-caption">We Provide All You Need</div>
+                    <div class="image-text">
+                        <ul class="image-text">
+                            <li>Web Application</li>
+                            <li>Window Application</li>
+                            <li>Mobile Application</li>
+                            <li>Game</li>
+                        </ul>
+                    </div>
+                    <img src="images/1046.jpeg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="image-caption">HT Active</div>
+                    <div class="image-text">
+                        <ul class="image-text">
+                            <li>Provide best services</li>
+                            <li>New technologies</li>
+                            <li>Cross browser</li>
+                            <li>Brilliant team</li>
+                        </ul>
+                    </div>
+                    <img src="images/1045.jpg" style="width:100%">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="image-caption">Satisfation Is What You Need</div>
+                    <div class="image-text">
+                        <ul class="image-text">
+                            <li>Clean and unique design</li>
+                            <li>After sale support</li>
+                            <li>Best quanlity</li>
+                            <li>Suppoort 24/7</li>
+                        </ul>
+                    </div>
+                    <img src="images/1048.jpg" style="width:100%">
+                </div>
+
+            </div>
+            <div class="loading"></div>
         </div>
-
         <div id="body-content">
-            <div class="slider-show">
-                <div class="mySlides fade">
-                    <div id="image-text">
-                        <h2>HT Active - Professional Software Solutions</h2>
-                    </div>
-                    <img src="images/1045.jpg" style="width:100%" class="image" />
-                </div>
-
-                <div class="mySlides fade">
-                    <div class="image-text">
-                        <h2>We provide all you need</h2>
-                    </div>
-                    <img src="images/1046.jpeg" style="width:100%" class="image" />
-                </div>
-
-                <div class="mySlides fade">
-                    <div class="image-text">
-                        <h2>Satifiscation is what we need</h2>
-                    </div>
-                    <img src="images/1048.jpg" style="width:100%" class="image" />
-                </div>
-
-                <div id="Loading"></div>
-            </div>
             <div id="content">
-                <h3>This season's guest speakers</h3>
+                <h4>This season's guest speakers</h4>
                 <ul>
                     <li>October: <a class="text-gray" href="https://en.wikipedia.org/wiki/Jeffrey_Toobin" target="_blank">Jeffrey Toobin</a></li>
                     <li>November: <a class="text-gray" href="https://en.wikipedia.org/wiki/Andrew_Ross_Sorkin" target="_blank">Andrew Ross Sorkin</a></li>
@@ -72,7 +94,7 @@
                     <li>April: <a class="text-red" href="https://en.wikipedia.org/wiki/Ronan_Tynan" target="_blank">Ronan
                             Tynan</a></li>
                 </ul>
-                <h3>Looking for a unique gift?</h3>
+                <h4>Looking for a unique gift?</h4>
                 <p>Town Hall hs the answer. For only $100, you can get a book of tickets for all the remaing speakers.
                     <br>And the bargain includes a second book of tickets for a companion. Or, for $50, you can give yourself
                     <br>the gift of speakers, and still get an extra ticket for a companion, but for just one of the events.
@@ -83,7 +105,26 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="script.js"></script>
+    <script>
+        var slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {
+                slideIndex = 1
+            }
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 5000);
+        }
+    </script>
 </body>
-<script type="text/javascript" src="script.js"></script>
+
 
 </html>
